Margin to prevent overlap

--- a/source/pages/profile.css
+++ b/source/pages/profile.css
@@ -2,6 +2,7 @@
     height: calc(20vh + 30px);
     width: 100%;
     padding-top: 30px;
+    margin-bottom: 20px;
 }
 
 .half-circle {
